--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
     <title>DevClub Café</title>
 </head>
 
@@ -30,9 +37,9 @@
 
             <div class="icons">
 
-                <img width="50" height="50" src="https://img.icons8.com/ios/50/search--v1.png" alt="search--v1" />
+                <img width="30" height="30" src="https://img.icons8.com/ios/30/ffffff/search--v1.png" alt="search--v1" />
 
-                <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/shopping-cart--v1.png"
+                <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffffff/shopping-cart--v1.png"
                     alt="shopping-cart--v1" />
 
 
